# vmm-sdat

./: .gitignore  CMakeLists.txt  Clusterer.cpp  Clusterer.h  Configuration.cpp  Configuration.h  DataStructures.h  NMXClusterer.cpp  NMXClusterer.h  README.md  Readout.h  RootFile.cpp  RootFile.h  Statistics.cpp  Statistics.h  accessTree.cpp  conanfile.txt  convert.cpp  convertFile.cpp  convertLinkDef.h  example.root
analysis/: README.md  VMM3a_analysis.C  VMM3a_analysis.h  accessTree.cpp  example.root  normalizeHisto.cpp  plots_LET.C  tree-cutter.py  tree-reader.py
analysis/application_frib/: README.md  clusterTriggerMatchingEnergy.cpp  clusterTriggerMatchingPosition.cpp  clusterTriggerMatchingPositionOverlay.cpp  clusterTriggerMatchingSize.cpp  fellowStyle.cpp
analysis/application_rd51_beam_telescope/: README.md  checkSync.py  spatialResolution.cpp  spatialResolutionEfficiency.cpp  spatialResolutionEfficiency.cpp~
analysis/examples_read_data/: VMM3a_analysis.C  VMM3a_analysis_C.d  VMM3a_analysis_C_ACLiC_dict_rdict.pcm  normalizeHisto.cpp
calib/: README.md  create_calib_file.py  hybrid_mapping.json  plot_calib.py  vmm_adc_calibration_0250401074100030c4cea000a0000039.json  vmm_adc_calibration_0250401074100030e872a000a0000056.json  vmm_adc_calibration_0250401074100031ac2ca000a00000af.json  vmm_adc_calibration_1e800718641000618893a000a0000043.json  vmm_time_calibration_0250401074100030c4cea000a0000039.json  vmm_time_calibration_0250401074100030e872a000a0000056.json  vmm_time_calibration_0250401074100031ac2ca000a00000af.json  vmm_time_calibration_1e800718641000618893a000a0000043.json  vmm_timewalk_calibration_0250401074100030c4cea000a0000039.json  vmm_timewalk_calibration_0250401074100030e872a000a0000056.json  vmm_timewalk_calibration_0250401074100031ac2ca000a00000af.json  vmm_timewalk_calibration_1e800718641000618893a000a0000043.json
corryvreckan/: EventLoaderVMM.conf  EventLoaderVMMSDAT.conf  README.md  duplicate_detector.C  example.root  runCorry_vmmsdat.py  sort_tree.C
corryvreckan/EventLoaderVMM/: CMakeLists.txt  EventLoaderVMM.cpp  EventLoaderVMM.h  README.md
corryvreckan/EventLoaderVMMSDAT/: CMakeLists.txt  EventLoaderVMMSDAT.cpp  EventLoaderVMMSDAT.h  README.md
corryvreckan/geometries/: GEM_telescospe.geo  RPC.geo
monitoring/: README.md  example_monitoring.json  example_monitoring.pcapng  example_monitoring1.pcapng  monitorData.html  monitorData.py  monitorData_tof.html  monitorData_tof.py  monitorDetector.html  monitorDetector.py  monitorGdGEM.html  storeMonitoringData.py  storePcapngData.py
monitoring/dash/: README.md  config.py  dash_app.py  example_monitoring.json  monitor.py
monitoring/dash/pages/: clusters.py  hits.py  stats.py
monitoring/interactive/: det_0.html  det_stats_0.html  det_total_0.html  monitorData.html  monitorData.py
run/: LET_geometry.json  README.md  example.h5  example.pcapng  example_LET.pcapng  example_LET.root  example_calib.json  example_endmarker_triggercount.pcapng  example_geometry.json  example_geometry_NIP.json  example_geometry_pad.json  example_geometry_trigger.json  example_geometry_xyu.json  example_pad.pcapng  example_pad_20251012235151_max_adc_pads.root  example_pad_20251012235206_max_adc_pads.root  example_pad_20251012235254_max_adc_pads.root  example_pad_20251013094050_max_adc_pads.root  example_rpc.json  example_rpc.pcapng  example_rpc_plane1.json  example_triggered_mode.pcapng  example_vtc.pcapng  example_xyu.pcapng  runConversion.py  runConversionH5.py  runConversionH5_calb.py  runConversionPcapng.py  runConversion_ADC.py  runConversion_HighMultiplicity.py  runConversion_LET.py  runConversion_NIP.py  runConversion_calib.py  runConversion_fit_position.py  runConversion_geometry.py  runConversion_geometry_pad.py  runConversion_pad_max_adc.py  runConversion_param_detector.py  runConversion_rpc.py  runConversion_rpc_plane1.py  (+3 more)
src/: Clusterer.cpp  Clusterer.h  Configuration.cpp  Configuration.h  DataStructures.h  ParserSRS.cpp  ParserSRS.h  RootFile.cpp  RootFile.h  Statistics.cpp  Statistics.h  convertFile.cpp  convertLinkDef.h  log.cpp  log.h
src/parser/: BitMath.h  CalibrationFile.cpp  CalibrationFile.h  NMXStats.h  ParserSRS.cpp  ParserSRS.h  ParserVTC.cpp  ParserVTC.h  ReaderPcap.cpp  ReaderPcap.h  Readout.h  ReadoutParser.cpp  ReadoutParser.h  ReadoutSRS.h  SRSTime.cpp  Trace.h  VMM3Parser.cpp  VMM3Parser.h  VTCParser.h
